# aishell

./: .gitignore  Makefile  README.md  api.py  fastapi.service  install.sh  nginx-shell.gleixner.xyz  openapi.yaml  prepare_git_repo.sh  pyproject.toml  requirements.txt
aishell/: __init__.py  api_log.html  logging_middleware.py  upload_form.html
aishell/routes/: auth.py  download_endpoint.py  execute.py  log.py  tmux.py  transfer_endpoint.py  transfer_openai.py  upload.py
app/: main.py  upload_form.html
app/routes/: tmux.py
deploy/: aishell.service  fastapi.service  install.sh  nginx-template.conf  openapi.yaml
tests/: test_execute.py
